--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "e:/DSA/SearchinAndSorting",
-      "program": "e:/DSA/SearchinAndSorting/build/Debug/outDebug",
+      "cwd": "e:/DSA/charArrayandString",
+      "program": "e:/DSA/charArrayandString/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
